scrollbar issue

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,9 @@
 .body{
   position: relative;
 }
+body::-webkit-scrollbar{
+  display: none;
+}
 .btn {
   padding: 0.75rem 2rem;
   position: relative;
